--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assist"
         tools:targetApi="31">
-
+        <receiver android:name=".AlarmReceiver" />
         <service
             android:name=".AssistService"
             android:exported="true"
