--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assist"
         tools:targetApi="31">
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name=".AlarmReceiver"
+            android:exported="true">
+        </receiver>
         <service
             android:name=".AssistService"
             android:exported="true"
