--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assist"
         tools:targetApi="31">
-        <receiver android:name=".AlarmReceiver"
+        <receiver android:name=".CenterReceiver"
             android:exported="true">
         </receiver>
         <service
